Initial memory analysis.